:art: WIP:add theme

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>its-me</title>
-    <link href=./static/css/app.1bcfd5d1ad34a3b9ae18655c8e846a6c.css rel=stylesheet>
-</head>
-
-<body>
-    <div id=app></div>
-    <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js> </script> <script type=text/javascript src=./static/js/vendor.f1c4881daa02da62a522.js> </script> <script type=text/javascript src=./static/js/app.e2d1cbb1160cede4163e.js> </script> </body> </html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>its-me</title><link href=/static/css/app.8ce56849ac9bd4b98cd47a407a395280.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.edbe8cc6771aa05a1e10.js></script><script type=text/javascript src=/static/js/app.917dd45424ccc03c942e.js></script></body></html>
