--- a/demo/index.html
+++ b/demo/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>its-me</title><link href=./static/css/app.8ce56849ac9bd4b98cd47a407a395280.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=./static/js/vendor.edbe8cc6771aa05a1e10.js></script><script type=text/javascript src=./static/js/app.917dd45424ccc03c942e.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <title>its-me</title>
+    <link href=./static/css/app.635e6ce5ebf7577866c3697e992606c6.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js> </script> <script type=text/javascript src=./static/js/vendor.208f9f5614fab6802d17.js> </script> <script type=text/javascript src=./static/js/app.12a57ed261220e99dfda.js> </script> </body> </html>
