--- a/demo/index.html
+++ b/demo/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>its-me</title>
-    <link href=./static/css/app.11b5c52f09a19988dafb5bd045813a9c.css rel=stylesheet>
-</head>
-
-<body>
-    <div id=app></div>
-    <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js> </script> <script type=text/javascript src=./static/js/vendor.a622f6a16be81a583f1e.js> </script> <script type=text/javascript src=./static/js/app.8b07663088feb89a60a2.js> </script> </body> </html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>its-me</title><link href=./static/css/app.8c8b2f64483fe5d0cd306e9dfcc61028.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.afcfdc356d9be0b2c76b.js></script><script type=text/javascript src=./static/js/app.84d73718f5b8b8da5ac3.js></script></body></html>
