--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="app"></div>
     <script type="text/javascript" src="https://cdn.bootcss.com/jspdf/1.5.3/jspdf.min.js"></script>
-    <script type="text/javascript" src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
+    <script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <!-- built files will be auto injected -->
 </body>
 </html>
